- Updated launch.json to leverage Doppler secrets - Trimmed croft from build and serve shell scripts - Pointed CMS media folder to src/media - Updated build.js paths to handle change in media path - Commented out sole url:() in main.css - TODO: Figure out how to handle relative paths in css files with ESBuild - Removed original template script references at the bottom of all the page templates

--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "www.tforster.com",
   "description": "The official website of Troy Forster",
-  "version": "3.1.0",
+  "version": "11.0.0",
   "private": false,
   "scripts": {
     "build": "scripts/build.sh",
-    "s3-server": "node ~/dev/tforster/s3-server/node_modules/s3rver/bin/s3rver.js -s -h 0.0.0.0 -p 4568 -d ~/dev/tforster/s3-server/data -i index.html -e app.html & gulp watch"
+    "serve": "scripts/serve.sh"
   },
-  "dependencies": {
-    "gulp-babili": "^0.1.2",
-    "marked": "^0.3.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@tforster/webproducer": "^1.0.0-beta.2",
     "eslint": "^8.56.0",
