--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,17 @@
 {
-  "peacock.remoteColor": "#01743a"
+  "peacock.remoteColor": "#01743a",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#01a753",
+    "activityBar.background": "#01a753",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#7e02fd",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#01a753",
+    "titleBar.activeBackground": "#01743a",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#01743a99",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  }
 }
