--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "scripts/serve.sh"
   },
   "devDependencies": {
+    "@svgdotjs/svg.js": "^3.2.4",
     "@tforster/webproducer": "^1.0.0-beta.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -16,7 +17,8 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
+    "svg-path-bounding-box": "^1.0.4",
+    "svgson": "^5.3.1",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^3.0.3",
     "wrangler": "^3.47.1"
