--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "serve": "scripts/serve.sh"
   },
   "devDependencies": {
-    "@svgdotjs/svg.js": "^3.2.4",
-    "@tforster/webproducer": "^1.0.0-beta.2",
-    "eslint": "^8.56.0",
+    "@tforster/webproducer": "^1.0.0-beta.3",
+    "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-html": "^8.0.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "svg-path-bounding-box": "^1.0.4",
     "svgson": "^5.3.1",
     "vinyl": "^3.0.0",
-    "vinyl-fs": "^3.0.3",
-    "wrangler": "^3.47.1"
+    "vinyl-fs": "3.0.3",
+    "wrangler": "^3.78.7"
   },
   "repository": "git+https://github.com/tforster/tforster.com.git",
   "author": "Troy Forster (http://tforster.com)",
