--- a/.pages.yml
+++ b/.pages.yml
@@ -285,6 +285,9 @@ content:
       - name: cover
         label: Cover
         type: image
+      - name: body
+        label: Body
+        type: rich-text
 
       - name: meta
         type: object
